package knou.seoul.hanwoori.domain.member.dto;

public class MemberResponseDTO {
}
